--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,13 @@ ul{
 li{
     margin-bottom: 5px;
 }
+.email{
+    font-size: 15px;
+}
+a{
+    text-decoration: underline;
+    color: rgb(0, 0, 0);
+}
 p{
     text-align: justify;
 }
